# api/miscellaneous/routes.go
@@ -4,6 +4,21 @@ import "github.com/gorilla/mux"
 
 // LoadMiscellaneousRoutes - load all miscellaneous routes with empty prefix
 func LoadMiscellaneousRoutes(router *mux.Router) {
+
+	// content
+	router.HandleFunc("/content", Content).Methods("GET")
+	router.HandleFunc("/content/like", ContentLikeGet).Queries(
+		"user_id", "{user_id}",
+	).Methods("GET")
+	router.HandleFunc("/content/like", ContentLikeAdd).Queries(
+		"user_id", "{user_id}",
+		"content_id", "{content_id}",
+	).Methods("POST")
+	router.HandleFunc("/content/like", ContentLikeDelete).Queries(
+		"user_id", "{user_id}",
+		"content_id", "{content_id}",
+	).Methods("DELETE")
+
 	// categories of content
 	router.HandleFunc("/content-category", ListContentCategory).Methods("GET")
 
